2002-04-22  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-region): Call `w3m-process-stop' first.

	* shimbun/mew-shimbun.el (mew-shimbun-scan-replace):
	`mew-pop-scan-header' require multi-byte buffer.

	* mew-w3m.el (mew-w3m-view-inline-image): Toggle
	`mew-w3m-auto-insert-image'.
	(mew-w3m-cid-retrieve-hook): New customize hook.
	(mew-w3m-cid-retrieve): Run `mew-w3m-cid-retrieve-hook'.

2002-04-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-insert-string): Prevent doubling expansion on
	the arg.

	* shimbun/sb-palmfan.el (shimbun-palmfan-news-headers): Bind
	unbound var `body'.

2002-04-20  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* mime-w3m.el (mime-w3m-cid-retrieve): Use `w3m-insert-string'
	instead of `insert' to prevent multibyte/unibyte problems.
	* octet.el (mime-preview-octet, mime-view-octet): Ditto.
	* shimbun/sb-hns.el (shimbun-article): Ditto.

	* w3m-util.el (w3m-insert-string): Moved from shimbun/shimbun.el.

	* shimbun/shimbun.el (shimbun-make-mime-article): Keep the
	uniqueness on cid's.
	(shimbun-insert-string): Moved to w3m-util.el and renamed to
	`w3m-insert-string'.
	(shimbun-article): Replace `shimbun-insert-string' with
	`w3m-insert-string'.

2002-04-21  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-mailman.el: New file.
	* shimbun/sb-pilot-link.el: Ditto.

2002-04-20  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-w3m-attributes): Set type to downcase.

2002-04-20  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-palmfan.el (shimbun-palmfan-news-headers): Add
	SUBJECT to BODY if SUBJECT contains a link.

2002-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-about-header): Don't use `make-string' to make a
	separator text under Mule.

2002-04-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-cid-retrieve): Support w3m-bitmap.el when
	retrieve `cid image' (Mew cache has multibyte strings, but work
	buffer is unibyte).
