@@ -79,9 +79,12 @@
   )
 
 (defun shimbun-palmfan-news-headers (shimbun &optional range)
-  (let ((case-fold-search t)
-	(url (shimbun-index-url shimbun))
-	(from "hirose@palmfan.com")
+  (let* ((case-fold-search t)
+	 (url (shimbun-index-url shimbun))
+	 (idbase (if (string-match "^http://\\([^/]+\\)/" url)
+		     (match-string 1 url)
+		   url))
+	 (from "hirose@palmfan.com")
 	headers)
     (with-temp-buffer
       (shimbun-retrieve-url url 'no-cache 'no-decode)
@@ -136,10 +139,9 @@
 		  (setq body (buffer-substring-no-properties
 			      (point) (search-forward "</BLOCKQUOTE>" end))
 			count (1+ count)
-			id (format "<%02d%04d%02d%02d@%s>"
-				   count year
+			id (format "<%02d%04d%02d%02d@%s>" count year 
 				   (cdr (assoc month shimbun-palmfan-month-alist))
-				   day url))
+				   day idbase))
 		  (if (shimbun-search-id shimbun id)
 		      (throw 'stop nil))
 		  (when (string-match "^[\n\t ]*\\(.*\\)[\n\t ]*$" subject)
